--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 775px) and (max-width: 1174px)">
+  <link rel="stylesheet" href="css/styles_large.css" media="screen and (min-width: 1175px)">
+
   <title>Restaurant Reviews</title>
 </head>
 
