--- a/restaurant.html
+++ b/restaurant.html
@@ -2,10 +2,22 @@
 <html>
 
 <head>
+  <!-- Set charset tag -->
+  <meta charset="utf-8">
+  <!-- Setting the viewport tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <!-- Main CSS file -->
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+
+  <!-- CSS files -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 775px) and (max-width: 1174px)">
+  <link rel="stylesheet" href="css/styles_large.css" media="screen and (min-width: 1175px)">
+  
   <title>Restaurant Info</title>
 </head>
 
