style: Add scripts comment in index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="map-container">
       <div id="map"></div>
     </section>
-    
+
     <section id="filter">
       <div class="filter-options">
         <h2>Filter Results</h2>
@@ -47,10 +47,13 @@
     </section>
   </main>
 
+  <!-- Scripts -->
+  <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDut4PY7wqSrnsuqMx4khkdZxFLTelhe1k&libraries=places&callback=initMap"></script>
-
 
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
