--- a/restaurant.html
+++ b/restaurant.html
@@ -58,6 +58,7 @@
               <i class="far fa-clock"></i>
           </div>
           <h2 class="restaurant-section-title">Hours</h2>
+          <p id="restaurant-today"></p>
         </div>
         <table id="restaurant-hours"></table>
       </section>
