feat: Display different images for different resolutions in restaurants
Images are sized appropiate to the viewport. There are three different widths: 425px, 625px, and 800px.

--- a/restaurant.html
+++ b/restaurant.html
@@ -38,13 +38,10 @@
       <section class="restaurant-intro">
         <h1 id="restaurant-name"></h1>
         <p id="restaurant-cuisine"></p>
-        <img id="restaurant-img">
-
         <picture>
-            <source media="(min-width: 650px)" srcset="kitten-large.png">
-            <source media="(min-width: 465px)" srcset="kitten-medium.png">
-            <img id="restaurant-img">
-            <img src="kitten-small.png" alt="Cute kitten">
+            <source id="restaurant-img-large">
+            <source id="restaurant-img-medium">
+            <img id="restaurant-img-small">
         </picture>
 
       </section>
