feat: Add Offline support via Service worker

--- a/restaurant.html
+++ b/restaurant.html
@@ -82,6 +82,8 @@
   </footer>
 
   <!-- Scripts -->
+  <!-- SW Initialization-->
+  <script type="application/javascript" charset="utf-8" src="js/sw_init.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
