--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   </main>
 
   <!-- Scripts -->
+  <!-- SW Initialization-->
+  <script type="application/javascript" charset="utf-8" src="js/sw_init.js"></script>
   <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
