feat: New icon image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 665px) and (max-width: 1009px)">
   <link rel="stylesheet" href="css/styles_large.css" media="screen and (min-width: 1010px)">
 
+  <!-- Favicon -->
+  <link rel="icon" href="img/icon.png">
+
   <title>Restaurant Reviews</title>
 </head>
 
