feat: Import idb.js file
 Can't use the import syntax without babel. Add idb.js file in the javascript folder. Include the script file in index.html.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <script type="application/javascript" charset="utf-8" src="js/sw_init.js"></script>
   <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
   <!-- Main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- Google Maps -->
