--- a/restaurant.html
+++ b/restaurant.html
@@ -89,6 +89,7 @@
   <script type="application/javascript" charset="utf-8" src="js/sw_init.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="node_modules/idb/lib/idb.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
