Add pwa manifest

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <!-- Set charset tag -->
   <meta charset="utf-8">
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#f18200">
   <!-- Setting the viewport tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
