--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet"> -->
 
   <!-- CSS files -->
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 665px) and (max-width: 1009px)">
   <link rel="stylesheet" href="css/styles_large.css" media="screen and (min-width: 1010px)">
 
@@ -52,6 +52,377 @@
       <ul id="restaurants-list" aria-label="Restaurant list"></ul>
     </section>
   </main>
+
+  <style>
+/* CSS Document */
+
+/* ====================== General ====================== */
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+body,
+td,
+th,
+p {
+	font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  line-height: 1.2rem;
+	color: #333;
+}
+
+body {
+	background-color: #fdfdfd;
+	margin: 0;
+	position:relative;
+}
+
+ul,
+li {
+	font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  line-height: 1.2rem;
+	color: #333;
+}
+
+a {
+	color: orange;
+	text-decoration: none;
+}
+
+a:hover,
+a:focus {
+	color: #3397db;
+	text-decoration: none;
+}
+
+a img {
+	border: none 0px #fff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Quicksand", sans-serif;
+  margin: 0 0 20px;
+}
+
+h1 {
+  line-height: 1.45rem;
+  font-size: 1.25rem;
+}
+
+h2 {
+  line-height: 1.4rem;
+  font-size: 1.2rem;
+}
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+	display: block;
+}
+
+img,
+embed,
+object,
+video {
+  max-width: 100%;
+}
+
+#maincontent {
+  background-color: #f3f3f3;
+  min-height: 100%;
+  min-width: 320px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#footer {
+  width: 100%;
+  min-width: 320px;
+  background-color: #444;
+  color: #b3b3b3;
+  font-size: 8pt;
+  letter-spacing: 1px;
+  padding: 25px 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/* ====================== Navigation ====================== */
+nav {
+  min-width: 320px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: #252831;
+}
+
+nav h1 {
+  text-align: center;
+  padding: 0 10px;
+  margin: auto;
+}
+
+nav h1 a {
+  color: #fff;
+  font-weight: 200;
+  letter-spacing: 10px;
+  padding: 0 0 0 10px;
+  text-transform: uppercase;
+}
+
+.breadcrumb-container {
+  padding: 15px 0 15px 30px;
+  background-color: #eee;
+}
+
+#breadcrumb {
+    list-style: none;
+}
+
+/* Display list items side by side */
+#breadcrumb li {
+    display: inline;
+}
+
+/* Add a slash symbol (/) before/behind each list item */
+#breadcrumb li+li:before {
+    color: black;
+    content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+#breadcrumb li a {
+    color: #2970a0;
+    text-decoration: none;
+}
+
+/* Add a color on mouse-over */
+#breadcrumb li a:hover {
+    color: #013a6b;
+    text-decoration: underline;
+}
+
+/* ====================== Map ====================== */
+#map-container {
+  width: 100%;
+}
+
+#map {
+  height: 400px;
+  background-color: #ccc;
+}
+
+/* ====================== Restaurant Filtering ====================== */
+#filter {
+  width: 100%;
+}
+
+.filter-options {
+  width: 100%;
+  padding: 25px 0px;
+  text-align: center;
+  background-color: #2b7bb1;
+}
+
+.filter-options h2 {
+  color: white;
+  font-weight: normal;
+  line-height: 1;
+  margin: 0 20px;
+}
+
+.filter-options select {
+  background-color: white;
+  border: 1px solid #fff;
+  height: 35px;
+  letter-spacing: 0;
+  margin: 10px;
+  width: 200px;
+}
+
+#neighborhoods-select:focus,
+#cuisines-select:focus {
+  border: 3px solid #252831;
+}
+
+/* ====================== Restaurant Listing ====================== */
+#restaurants-list {
+  background-color: #f3f3f3;
+  list-style: outside none none;
+  text-align: center;
+  margin: 15px 0;
+}
+
+#restaurants-list li {
+  min-height: 380px;
+  width: 320px;
+  margin: 0 auto 40px;
+  padding: 0 0 15px;
+  background-color: #fff;
+  box-shadow: 0 1px 10px 0px rgba(151, 151, 151, 0.712);
+}
+
+#restaurants-list li:last-of-type {
+  margin: 0 auto;
+}
+
+.restaurant-img {
+  width: 100%;
+}
+
+#restaurants-list .restaurant-img {
+  background-color: #ccc;
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  min-height: 248px;
+  min-width: 100%;
+}
+
+#restaurants-list li h1 {
+  color: #a55902;
+  font-weight: 200;
+  letter-spacing: 0;
+  line-height: 1.35rem;
+  font-size: 1.15rem;
+  margin: 20px 0 10px;
+  text-transform: uppercase;
+}
+
+#restaurants-list p {
+  margin: 0;
+}
+
+#restaurants-list li a {
+  background-color: #a55902;
+  color: #fff;
+  display: inline-block;
+  margin: 30px 0;
+  padding: 13px 30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#restaurants-list li a:focus {
+  border: 3px solid #252831;
+}
+
+/* ====================== Restaurant Details ====================== */
+.inside #map {
+  height: 300px;
+}
+
+#restaurant-container section:nth-child(2) {
+  padding: 1px 0 0 0;
+  background-color: white;
+}
+
+#restaurant-container section:nth-child(4) {
+  padding: 1px 0 0 0;
+  background-color: white;
+}
+
+#restaurant-name {
+  color: #a55902;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 20px 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#restaurant-cuisine {
+  background-color: #333;
+  color: #ddd;
+  font-weight: 300;
+  letter-spacing: 10px;
+  padding: 5px 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.restaurant-icon {
+  color: #f18200;
+  margin: 20px 0 10px;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.restaurant-address {
+  width: 100%;
+}
+
+.restaurant-address p,
+#restaurant-today {
+  text-align: center;
+  margin: 10px 0px;
+}
+
+.restaurant-hours {
+  width: 100%;
+}
+
+table, th, td {
+  border-collapse: collapse;
+}
+
+table {
+  width: 100%;
+}
+
+td:nth-child(odd) {
+  padding: 10px 8px 10px 16px;
+}
+
+td:nth-child(even) {
+  padding: 10px 16px 10px 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+.restaurant-section-title {
+  text-align: center;
+}
+
+.reviews-container {
+  width: 100%;
+}
+
+#reviews-list li {
+  background-color: #fff;
+  display: block;
+  list-style-type: none;
+  padding: 30px 20px;
+  overflow: hidden;
+}
+
+#reviews-list li:nth-child(odd) {
+  background-color: #ffd4a3be;
+}
+
+#reviews-list li p {
+  margin: 0 0 10px;
+}
+  </style>
 
   <!-- Scripts -->
   <!-- SW Initialization-->
