--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
 /* CSS Document */
 
 /* ====================== General ====================== */
+@font-face {
+  font-family: 'Quicksand';
+  src: url(fonts/Quicksand/Quicksand-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url(fonts/Quicksand/Quicksand-Light.ttf);
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url(fonts/Quicksand/Quicksand-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url(fonts/Quicksand/Quicksand-Medium.ttf);
+  font-weight: 500;
+}
+
 * {
   margin: 0px;
   padding: 0px;
