feat: Add favorite button
Allow the user to set a restaurant as a favorite. When a restaurant is set as favorite the restaurant data will be updated in IDB and an attemp to update the data in the server will be made. If the server update fails, the request will be tried again when the 'online' event is triggered.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- Fonts -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet"> -->
 
+  <!-- Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <!-- CSS files -->
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 665px) and (max-width: 1009px)">
@@ -344,6 +347,16 @@ nav h1 a {
 
 #restaurants-list li a:focus {
   border: 3px solid #252831;
+}
+
+.favorite {
+  color: #e2d406;
+}
+
+button {
+  border: 0px;
+  background: none;
+  margin: 5px 15px 15px;
 }
 
 /* ====================== Restaurant Details ====================== */
