--- a/restaurant.html
+++ b/restaurant.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet"> -->
 
   <!-- CSS files -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
