feat: Self serve material icons

--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 
-  <!-- Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet"> -->
-
-  <!-- Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <!-- CSS files -->
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <link rel="stylesheet" href="css/styles_medium.css" media="screen and (min-width: 665px) and (max-width: 1009px)">
@@ -58,6 +52,45 @@
 
   <style>
 /* CSS Document */
+
+/* Material Design Icons */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(fonts/md-icons/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(css/fonts/md-icons/MaterialIcons-Regular.woff2) format('woff2'),
+    url(css/fonts/md-icons/MaterialIcons-Regular.woff) format('woff'),
+    url(css/fonts/md-icons/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 /* ====================== General ====================== */
 @font-face {
   font-family: 'Quicksand';
