feat: Add ARIA label for attribute in the form

--- a/restaurant.html
+++ b/restaurant.html
@@ -82,15 +82,15 @@
           <h4>Add a new Review</h4>
             <form id="reviews-form" class="reviews-form" action="javascript:;" onsubmit="saveReview()">
               <div class="form-group">
-                  <label>Name</label>
+                  <label for="form-name">Name</label>
                   <input id="form-name" type="text" placeholder="Insert your name" name="name" required>
               </div>
               <div class="form-group">
-                  <label>Rating</label>
+                  <label for="form-rating">Rating</label>
                   <input id="form-rating" type="number" placeholder="From 1 to 5, how good is this place?" name="rating" min="1" max="5" required>
               </div>
               <div class="form-group">
-                  <label>Comments</label>
+                  <label for="form-comments">Comments</label>
                   <textarea id="form-comments" placeholder="Insert any additional feedback" name="comments"></textarea>
               </div>
 
