feat: Improve favorite visibility

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="do-search-container">
         <p id="do-search">
-          Search your favorite restaurants by your neighborhood and cuisine type!
+          Search and review restaurants by your neighborhood and cuisine type!
         </p>
     </div>
 
@@ -439,8 +439,10 @@ nav h1 a {
   border: 3px solid #252831;
 }
 
-.favorite {
-  color: #e2d406;
+.favorite-text {
+  color: #a55902;
+  font-size: 0.8rem;
+  text-decoration: underline;
 }
 
 button {
