--- a/restaurant.html
+++ b/restaurant.html
@@ -80,18 +80,18 @@
       <section id="reviews-form-section">
         <div id="reviews-form-container">
           <h4>Add a new Review</h4>
-            <form id="reviews-form" class="reviews-form" action="javascript:;" onsubmit="saveReview()">
-              <div class="form-group">
+            <form id="reviews-form" class="reviews-form" action="javascript:;" onsubmit="saveReview()" aria-label="Add a new Review">
+              <div class="form-group" role="form">
                   <label for="form-name">Name</label>
-                  <input id="form-name" type="text" placeholder="Insert your name" name="name" required>
+                  <input id="form-name" type="text" placeholder="Insert your name" name="name" required aria-required="true">
               </div>
-              <div class="form-group">
+              <div class="form-group" role="form">
                   <label for="form-rating">Rating</label>
-                  <input id="form-rating" type="number" placeholder="From 1 to 5, how good is this place?" name="rating" min="1" max="5" required>
+                  <input id="form-rating" type="number" placeholder="From 1 to 5, how good is this place?" name="rating" min="1" max="5" required aria-required="true">
               </div>
-              <div class="form-group">
+              <div class="form-group" role="form">
                   <label for="form-comments">Comments</label>
-                  <textarea id="form-comments" placeholder="Insert any additional feedback" name="comments"></textarea>
+                  <textarea id="form-comments" placeholder="Insert any additional feedback" name="comments" aria-required="false"></textarea>
               </div>
 
               <button class="submit">Send</button>
