feat: Improve fonts loading time by setting fallback font-display

--- a/restaurant.html
+++ b/restaurant.html
@@ -108,24 +108,28 @@
   <style>
 @font-face {
   font-family: 'Quicksand';
+  font-display: fallback;
   src: url(css/fonts/Quicksand/Quicksand-Bold.ttf);
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Quicksand';
+  font-display: fallback;
   src: url(css/fonts/Quicksand/Quicksand-Light.ttf);
   font-weight: lighter;
 }
 
 @font-face {
   font-family: 'Quicksand';
+  font-display: fallback;
   src: url(css/fonts/Quicksand/Quicksand-Regular.ttf);
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Quicksand';
+  font-display: fallback;
   src: url(css/fonts/Quicksand/Quicksand-Medium.ttf);
   font-weight: 500;
 }
